package com.example.flowmerceproject.StoreMangement.entity;

import com.example.flowmerceproject.UserManagement.entity.Merchant;
import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;

import java.time.LocalDateTime;

@Entity
@Table(name = "stores")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Store {

    public enum StoreStatus {
        DRAFT,
        PUBLISHED,
        PAUSED,
        DEACTIVATED
    }

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "store_id")
    private Integer storeId;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "merchant_id", nullable = false)
    private Merchant merchant;

    @Column(name = "store_name", nullable = false, length = 150)
    private String storeName;

    @Column(name = "store_url", nullable = false, unique = true, length = 255)
    private String storeUrl;

    @Column(name = "description", columnDefinition = "TEXT")
    private String description;

    @Column(name = "logo", length = 255)
    private String logo;

    @Enumerated(EnumType.STRING)
    @Column(name = "status", nullable = false)
    @Builder.Default
    private StoreStatus status = StoreStatus.DRAFT;

    @Column(name = "current_step")
    @Builder.Default
    private Integer currentStep = 0;

    @Column(name = "payment_methods", columnDefinition = "TEXT")
    private String paymentMethods;

    @CreationTimestamp
    @Column(name = "created_at", updatable = false)
    private LocalDateTime createdAt;

    @OneToOne(mappedBy = "store", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
    private StoreSettings settings;
}
